# simple-lyric-display

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/core/: mpris.py  parser.py  sync.py
src/gui/: settings.py  tray.py  window.py
src/gui/widgets/: lyrics.py
src/utils/: config.py  constants.py  logger.py  paths.py  themes.py
tests/: conftest.py  test_config.py  test_gui_structure.py  test_mpris.py  test_parser.py  test_sync.py
