[project]
name = "simple-lyric-display"
version = "0.1.0"
description = "A lightweight, premium lyric display tool for Linux desktops"
requires-python = ">=3.14"
dependencies = [
    "PySide6",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"] # Ignore long lines handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
